stopping animations on next; overflow auto on text

--- a/src/css/tei-lod.css
+++ b/src/css/tei-lod.css
@@ -105,7 +105,7 @@ img {
 
 .tei_body, .tei-aligned-text {
     max-height: 800px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #tei-theme-words {
